--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
         <div id="leftPanel">
             <h1>Kenneth Santos</h1>
-            <h2>Web Developer</h2>
+            <h2>Aspiring Developer</h2>
 
             <p>I love creating intuitive and efficient <br>solutions, and I'm constantly learning<br> new tools and
                 technologies to
