--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
         <div id="rightPanel">
             <div id="Section1" class="Section">
                 <h2>About</h2>
-                <p>I'm a dedicated software developer with a passion for coding, problem-solving, and building efficient
-                    solutions. I specialize in JavaScript, Python, and C++ and love taking on projects that push my
-                    skills and knowledge further. With experience in both front-end and back-end development, I enjoy
-                    tackling diverse challenges. I'm particularly interested in game development, automation, and
-                    optimizing software performance, always looking for opportunities to learn and grow in the field.
+                <p>I'm a passionate software developer skilled in JavaScript, Python, and C++. I enjoy tackling both front-end and back-end challenges, with a focus on game development, automation, and software optimization. In addition to my software expertise, I have experience using Arduino for creating embedded systems and IoT projects. I am proficient in diagnosing and repairing computer motherboards, using multimeters for measurements, and performing soldering tasks. My goal is to combine software, hardware, and Arduino solutions to create efficient, well-rounded systems.
                 </p>
             </div>
 
@@ -80,7 +76,7 @@
         </div>
         <div id="leftPanel">
             <h1>Kenneth Santos</h1>
-            <h2>Aspiring Developer</h2>
+            <h2>Web Developer</h2>
 
             <p>I love creating intuitive and efficient <br>solutions, and I'm constantly learning<br> new tools and
                 technologies to
